test_suite/alan-2022-examples/failing/007130_mutation.alan
source L begin put "" . >= "" end
